# vibe-trader-optimizer

./: .gitignore  Dockerfile  LICENSE  README.md  config.env  pyproject.toml  taskfile.sh
.github/: dependabot.yml
.github/actions/deploy-to-gcloud/: action.yml
.github/actions/lint-format-test-code/: action.yml
.github/actions/load-env-variables/: action.yml
.github/actions/setup-project-environment/: action.yml
.github/workflows/: deployment.yml  release.yml  validation.yml
src/: common.py  main.py
src/optimization/: __init__.py  params_validation.py  pdf_dashboard.py  portfolio_optimizer.py  results_formatting.py  state_parser.py
test/: test_main.py
